--- a/templates/signup.html
+++ b/templates/signup.html
@@ -4,7 +4,9 @@
         <meta  charset="UTF-8" />
         <meta name = "viewport" content = "width=device-width,initial-scale=1.0"> 
         <title>Sign up </title>
+        
     </head>
+    
     <body>
         <h2>Sign up<h2>
         <form action="" method="post">
@@ -20,6 +22,43 @@
 
 
         </form>
+        <script>
+            const signUpForm = {
+              "form": {
+                "id": "sign-up-form",
+                "method": "POST",
+                "action": "/signup",
+                "fields": [
+                  {
+                    "phoneNumber": {
+                        "label": "Phone Number",
+                        "type": "text",
+                        "id": "phoneNumber",
+                        "required": true
+                    },
+                    "emailAddress": {
+                        "label": "email address",
+                        "type": "email",
+                        "id": "emailAddress",
+                        "required": true
+                    },
+                    "password": {
+                        "label": "Password",
+                        "type": "password",
+                        "id": "password",
+                        "required": true
+                    },
+                    "submit": {
+                        "type": "submit",
+                        "value": "Sign up"
+                    },
+                
+              }
+              
+            };
+            
+          </script>
+        
     </body>
   
 </html>
