--- a/templates/home.html
+++ b/templates/home.html
@@ -12,52 +12,45 @@
   </header>
 
   <div>
-    <p>Enter your phone number</p>
     <label for="phone">Phone Number:</label>
     <input type="tel" id="phone" name="phone" pattern="[0-9]{4}-[0-9]{3}-[0-9]{3}" placeholder="1234-567-890" required>
   </div>
 
   <div>
-    <h2 id="balance">Balance Left: 500ksh</h2>
+    <label for="cash">Enter amount:</label>
+    <input type="number" name="amount" id="amount">
   </div>
 
-  <table id="utilityTable">
-    <thead>
-      <tr>
-        <th>Utilities</th>
-        <th>Time</th>
-        <th>Amount</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td>Electricity</td>
-        <td id="electricityTime">time</td>
-        <td>100ksh</td>
-      </tr>
-      <tr>
-        <td>Internet</td>
-        <td id="internetTime">time</td>
-        <td>100ksh</td>
-      </tr>
-      <tr>
-        <td>Water</td>
-        <td id="waterTime">time</td>
-        <td>100ksh</td>
-      </tr>
-      <tr>
-        <td>Gas</td>
-        <td id="gasTime">time</td>
-        <td>100ksh</td>
-      </tr>
-      <tr>
-        <td>Rent</td>
-        <td id="rentTime">time</td>
-        <td>100ksh</td>
-      </tr>
-    </tbody>
-  </table>
+  <div class="Table">
+    <p>Enter Budget plan</p>
+  <label for="budget">Amount:</label>
+  <input type="text" name="Amount" id="amount">
+  <label for="clock">Time:</label>
+  <input type="time" name="Time" id="time">
 
+  <label for="budget">Amount:</label>
+  <input type="text" name="Amount" id="amount">
+  <label for="clock">Time:</label>
+  <input type="time" name="Time" id="time">
+
+  <label for="budget">Amount:</label>
+  <input type="text" name="Amount" id="amount">
+  <label for="clock">Time:</label>
+  <input type="time" name="Time" id="time">
+
+  <label for="budget">Amount:</label>
+  <input type="text" name="Amount" id="amount">
+  <label for="clock">Time:</label>
+  <input type="time" name="Time" id="time">
+
+  <label for="budget">Amount:</label>
+  <input type="text" name="Amount" id="amount">
+  <label for="clock">Time:</label>
+  <input type="time" name="Time" id="time">
+  </div>
+  
+  
+  <input type="button" value="submit">
   <script src="/static/js/home.js"></script>
 </body>
 </html>
