--- a/static/css/home.css
+++ b/static/css/home.css
@@ -2,11 +2,11 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: Helvetica;
 }
 
 /* Apply a basic background color and font family */
 body {
-    font-family: Arial, sans-serif;
     background-color: #f8f8f8;
     padding: 20px;
 }
