--- a/templates/signup.html
+++ b/templates/signup.html
@@ -11,21 +11,22 @@
         <h2>Sign up<h2>
      <div>
         <form id="form" action="" method="post">
-         <label for="PhoneNumber">Phone Number:</label>
+         <label for="PhoneNumber">PhoneNumber:</label>
          <input type="text" id="PhoneNumber" > <br>
 
          <label for="email address">email address:</label>
          <input type="email" id="email address"><br>
 
          <label for="Password">Password:</label>
-         <input type="Password" id="Password"> <br>
-         
+         <input type="password" id="Password"> <br>
+         <label for="Confirm Password">Confirm Password:</label>
+         <input type="password" id="ConfirmPassword"> 
          <button type="submit">submit</button>
 
 
         </form>
     </div>
-        <script src="/static/js/signup.js"> </script>
+         <script src="/static/js/signup.js"> </script>
         
     </body>
   
