--- a/templates/home.html
+++ b/templates/home.html
@@ -56,7 +56,7 @@
       </tr>
     </table>
   </div> 
-  <input type="button" value="submit">
+  <input type="button" value="submit" id="submitbutton" >
   <script src="/static/js/home.js"></script>
 </body>
 </html>
