--- a/static/css/login.css
+++ b/static/css/login.css
@@ -22,7 +22,7 @@ body {
     border: 1px solid #ccc;
     border-radius: 3px;
   }
-  input[type="submit"] {
+  input[type="button"] {
     background-color: #007bff;
     color: #fff;
     border: none;
