--- a/templates/login.html
+++ b/templates/login.html
@@ -25,7 +25,7 @@
       <label for="password">Password:</label>
       <input type="password" id="password" name="password" required>
     </div>
-    <input type="submit" value="Sign In">
+    <input type="button" value="Sign In">
   </form>
 </div>
 
