--- a/templates/signup.html
+++ b/templates/signup.html
@@ -4,6 +4,7 @@
         <meta  charset="UTF-8" />
         <meta name = "viewport" content = "width=device-width,initial-scale=1.0"> 
         <title>Sign up </title>
+        <link rel="stylesheet" href="/static/css/signup.css"
         
     </head>
     
@@ -11,16 +12,13 @@
         <h2>Sign up<h2>
      <div>
         <form id="form" action="" method="post">
-         <label for="PhoneNumber">PhoneNumber:</label>
-         <input type="text" id="PhoneNumber" > <br>
-
+    
          <label for="email address">email address:</label>
          <input type="email" id="email address"><br>
 
          <label for="Password">Password:</label>
          <input type="password" id="Password"> <br>
-         <label for="Confirm Password">Confirm Password:</label>
-         <input type="password" id="ConfirmPassword"> 
+         
          <button type="submit">submit</button>
 
 
