--- a/templates/signup.html
+++ b/templates/signup.html
@@ -19,6 +19,9 @@
          <label for="Password">Password:</label>
          <input type="password" id="Password"> <br>
          
+         <label for="confirm  Password">Confirm Password:</label>
+         <input type="password" id="confirm Passowrd">  
+         
          <button type="submit">submit</button>
 
 
