--- a/templates/signup.html
+++ b/templates/signup.html
@@ -7,20 +7,23 @@
         <link rel="stylesheet" href="/static/css/signup.css"
         
     </head>
-    
+    <header>
+        <nav>help</nav>
+    </header>
+    <h2>Sign up</h2>
     <body>
-        <h2>Sign up<h2>
+        
      <div>
-        <form id="form" action="" method="post">
+        <form id="form" >
     
-         <label for="email address">email address:</label>
-         <input type="email" id="email address"><br>
+         <label for="Email address">Email address</label>
+         <input type="email" id="Email address"><br>
 
-         <label for="Password">Password:</label>
+         <label for="Password">Password</label>
          <input type="password" id="Password"> <br>
-         
-         <label for="confirm  Password">Confirm Password:</label>
-         <input type="password" id="confirm Passowrd">  
+
+         <label for="confirm password">confirm password</label>
+         <input type="password" id="confirm passowrd">  
          
          <button type="submit">submit</button>
 
