--- a/templates/login.html
+++ b/templates/login.html
@@ -15,7 +15,7 @@
 </script>
 <body>
 <div class="container">
-  <h2>Sign In</h2>
+  <h2>Log In</h2>
   <form action="/login" method="POST">
     <div class="form-group">
       <label for="email">Email:</label>
