--- a/templates/signup.html
+++ b/templates/signup.html
@@ -4,9 +4,9 @@
         <meta  charset="UTF-8" />
         <meta name = "viewport" content = "width=device-width,initial-scale=1.0"> 
         <title>Sign up </title>
-        <link rel="stylesheet" href="/static/css/signup.css"
-        
+        <link rel="stylesheet" href="/static/css/signup.css">
     </head>
+
     <header>
         <nav>help</nav>
     </header>
@@ -25,7 +25,7 @@
          <label for="confirm password">confirm password</label>
          <input type="password" id="confirm passowrd">  
          
-         <button type="submit">submit</button>
+         <button type="submit" id ="submit button">submit</button>
 
 
         </form>
