--- a/templates/login.html
+++ b/templates/login.html
@@ -28,6 +28,6 @@
     <input type="button" value="Sign In" id="sign in button">
   </form>
 </div>
-
+    <script src="/static/js/login.js"> </script>
 </body>
 </html>
