--- a/templates/signup.html
+++ b/templates/signup.html
@@ -23,7 +23,7 @@
          <input type="password" id="Password"> <br>
 
          <label for="confirm password">confirm password</label>
-         <input type="password" id="confirm passowrd">  
+         <input type="password" id="confirm password">  
          
          <button type="submit" id ="submitbutton">submit</button>
 
@@ -31,7 +31,6 @@
         </form>
     </div>
          <script src="/static/js/signup.js"> </script>
-        
     </body>
   
 </html>
