--- a/templates/home.html
+++ b/templates/home.html
@@ -33,7 +33,7 @@
                 </div>
 
                 <div class="col-2">
-                    <img src="/static/css/images/dollar.jfif" alt="">
+                    <img src="/static/css/images/dollar.png" alt="dollar_icon">
                 </div>
             </div>
             
