Update font styles, colors, and border radius in home.css, login.css, and signup.css; adjust form and input styles in login.html
The changes include:

1. home.css:
- Updated suggested color palette in comments
- Added `box-sizing: border-box;` to the universal selector
1. login.css:
- Changed font family to Cambria, Cochin, Georgia, Times, 'Times New Roman', serif
- Updated border and border-radius for input elements
- Changed display property of the container to flex and added flex-direction and flex properties to form-group
1. signup.css:
- Changed font weight to bold
- Updated font family to Cambria, Cochin, Georgia, Times, 'Times New Roman', serif
- Changed background-color and color for button elements
- Changed color and text-align for h2 elements
- Removed float property from nav
1. login.html:
- Removed empty script and style tags
- Updated form and input styles, including width, padding, margin, and border properties

--- a/static/css/home.css
+++ b/static/css/home.css
@@ -1,4 +1,5 @@
-*{
+*/* suggested pallete [34, 87, 122],[56, 163, 165],[87, 204, 153],[128, 237, 153],[199, 249, 204]*/
+{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
